--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,10 @@ dependencies = [
     "langchain-ollama>=0.3.0",
     "llama-index>=0.12.26",
     "mcp>=1.5.0",
+    "openai-agents>=0.0.7",
     "rich>=13.9.4",
     "streamlit>=1.44.0",
 ]
+
+[project.scripts]
+train = "train.trainer:run_train"
