--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "crawl4ai>=0.5.0.post8",
     "crewai[tools]>=0.108.0",
+    "duckdb>=1.2.1",
     "ipykernel>=6.29.5",
     "langchain-community>=0.3.20",
     "langchain-ollama>=0.3.0",
@@ -14,9 +15,11 @@ dependencies = [
     "mcp>=1.5.0",
     "nvitop>=1.4.2",
     "openai-agents>=0.0.7",
+    "openlit>=1.33.19",
     "rich>=13.9.4",
     "streamlit>=1.44.0",
 ]
 
 [project.scripts]
-train = "train.trainer:run_train"
+run = "entrypoint:run_main"
+mcp_server = "mcp_server:main"
