--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "crawl4ai>=0.5.0.post8",
-    "crewai[tools]>=0.108.0",
+    "crewai[tools]==0.114.0",
     "duckdb>=1.2.1",
     "ipykernel>=6.29.5",
     "langchain-community>=0.3.20",
@@ -15,7 +15,6 @@ dependencies = [
     "mcp>=1.5.0",
     "nvitop>=1.4.2",
     "openai-agents>=0.0.7",
-    "openlit>=1.33.19",
     "rich>=13.9.4",
     "streamlit>=1.44.0",
 ]
