--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "mcp>=1.5.0",
     "nvitop>=1.4.2",
     "openai-agents>=0.0.7",
+    "prometheus-client>=0.21.1",
     "rich>=13.9.4",
     "streamlit>=1.44.0",
 ]
