--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -3,6 +3,7 @@ version: 3
 
 vars:
   KUSTOMIZE_FLAGS: --enable-helm --enable-exec --enable-alpha-plugins
+  AI_PLATFORM_SERVICE_CONTAINER: teaglebuilt/ai_platform_service
 
 tasks:
   deploy:
@@ -14,3 +15,19 @@ tasks:
     cmds:
     - |-
       kustomize build {{.KUSTOMIZE_FLAGS}} ./ai/k8s | kubectl delete -f -
+
+  deploy_service_container:
+    cmds:
+    - docker build --target api -t {{.AI_PLATFORM_SERVICE_CONTAINER}}:latest .
+    - docker push {{.AI_PLATFORM_SERVICE_CONTAINER}}:latest
+
+  test-gateway:
+    cmds:
+    - |
+      http POST {{.AI_GATEWAY_IP}}/v1/chat/completions Content-Type:application/json x-ai-eg-model:gpt-4o-mini --raw '{
+        "model": "gpt-4o-mini",
+        "messages": [{
+          "role": "system",
+          "content": "Hello there"
+        }]
+      }'
