--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,11 @@ dependencies = [
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[tool.uv.workspace]
+members = [
+    "packages/platform_ai",
+]
+
 [project.scripts]
 run = "entry.cli.main:cli"
 shell = "entry.shell"
