--- a/packages/platform_ai/pyproject.toml
+++ b/packages/platform_ai/pyproject.toml
@@ -7,8 +7,27 @@ authors = [
     { name = "teaglebuilt", email = "dillan.teagle.va@gmail.com" }
 ]
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "crawl4ai>=0.5.0.post8",
+    "crewai[tools]==0.114.0",
+    "duckdb>=1.2.1",
+    "ipykernel>=6.29.5",
+    "langchain-community>=0.3.20",
+    "langchain-ollama>=0.3.0",
+    "llama-index>=0.12.26",
+    "mcp>=1.6.0",
+    "nvitop>=1.4.2",
+    "prometheus-client>=0.21.1",
+    "rich>=13.9.4",
+    "streamlit>=1.44.0",
+    "typer>=0.15.2",
+]
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+
+[project.scripts]
+run = "entry.cli.main:cli"
+shell = "entry.shell"
