--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,8 @@
 {
   "python.analysis.extraPaths": [
-    "src",
-    "api",
-    ".venv/lib/python3.12/site-packages"
+    "packages/platform_ai/src"
   ],
+  // "python.defaultInterpreterPath": "./env/bin/python",
   "python.analysis.typeCheckingMode": "standard",
   "python.languageServer": "Default",
   "[python]": {
